fix card image gap

--- a/css/research.css
+++ b/css/research.css
@@ -161,6 +161,7 @@ h2 {
 
 .card-s-img-container {
   overflow: hidden;
+  line-height: 0;
   /* border-bottom: solid 1px #E6E6E6; */
 }
 
